# KPF-Pipeline

./: .coveragerc  .dockerignore  .env.example  .gitignore  .pip.conf  .readthedocs.yml  .travis.yml  April 11 KPF L0 Object - Green 4 amp.ipynb  April 11 KPF L0 Object - Red 2 Amp.ipynb  CLAUDE.md  Dockerfile  Jenkinsfile.ci  Jenkinsfile.development  Keck_Dockerfile  LICENSE  README.md  RedGreenL0 Maker.ipynb  docker-compose.abtest.yml  docker-masters-run.sh  docker-run.sh  drp_setup  environment.yml  example.env  kpf_bibliography.bib  kpfmodel-review.txt  makefile  pyproject.toml  recipes.py  redis.conf  requirements.txt  setup.py  simulated-data.md  start.sh  template.fits  test.fits  testscript.py
AWH_notebooks/: QC Example - L0 Data Products Check.ipynb
AlgorithmDev/: .gitignore  README.md  foo.txt  setup.py
caldates/: etalon_drift_reference.csv  etalon_mask.csv  lfc_drift_reference.csv  master_wls.csv  order_mask.csv  order_trace.csv  smooth_lamp_pattern.csv  start_order.csv  trace_flat.csv  xdisp_ref.csv
configs/: create_order_mask_file.cfg  create_order_rectification_file.cfg  create_order_trace_files.cfg  default.cfg  drift_correction.cfg  era_specific.cfg  framework.cfg  framework_logger.cfg  framework_multi.cfg  framework_test.cfg  global_settings.cfg  instrument.cfg  keck_kpf_drp.cfg  keck_kpf_drp_20240211.cfg  keck_kpf_drp_local.cfg  keck_kpf_drp_watch.cfg  keck_kpf_drp_watch_20240211.cfg  keck_kpf_masters_drp_20240212.cfg  keck_kpf_masters_l1.cfg  keck_kpf_masters_l1_20240225.cfg  keck_quicklook_watch.cfg  keck_wls_auto.cfg  kpf_bc_test.cfg  kpf_bs_test.cfg  kpf_drp.cfg  kpf_drp_HTI.cfg  kpf_drp_do_only_drift.cfg  kpf_drp_local.cfg  kpf_drp_masters.toml  kpf_drp_science.cfg  kpf_drp_science.toml  kpf_l0_to_2D_only.cfg  kpf_masters_drp.cfg  kpf_masters_drp_before20230623.cfg  kpf_masters_drp_from20230624to20230730.cfg  kpf_masters_l1.cfg  kpf_single_recipes.cfg  logger.cfg  master_arclamp.cfg  master_bias.cfg  (+22 more)
cronjobs/: cleanOldFilesFromDisk.pl  crontab.rlaher.save  generateDailyRunScript.pl  generateDailyRunScriptsBetweenTwoDates.pl  generateDailyRunScriptsForMonth.pl  generateWLSScriptBetweenTwoDates.pl  keck_file_count.sh  keck_kpfcron.cfg  keck_kpfcron_base.py  keck_kpfcron_lev0.py  keck_kpfcron_lev1.py  keck_kpfcron_nightly.py  keck_kpfcron_nightly_watch.py  keck_kpfcron_qlp.py  keck_kpfcron_register.py  keck_kpfcron_run_reboot.py  keck_kpfcron_scrubber.py  keck_kpfcron_wls.py  keck_kpfmasters_lev0.py  keck_kpfmasters_lev1.py  keck_kpfmasters_register_in_db.py  keck_kpfmasters_wls_auto.py  keck_kpfpipe_nightly.py  keck_monitor_koadata.py  keck_monitor_koadata.sh  keck_proc_timediff.py  keck_run_daily.sh  keck_run_full.sh  keck_run_nightly.py  keck_slow_touch.py  keck_utils.py  kpf_masters_pipeline.py  kpf_masters_pipeline.sh  kpf_masters_pipeline_fast.py  kpfmasters_etalon_analysis.pl  kpfmasters_order_trace.pl  kpfmasters_wls_auto.pl  kpfmastersruncmd_l0.pl  kpfmastersruncmd_l1.pl  reprocessYesterday.sh  (+6 more)
debug/: .~lock.KPF.2007-04-04T09_17_51.376_e2ds_A.xlsx#  KPF.2007-04-04T09_17_51.376_e2ds_A.xlsx  KPF.2007-04-06T09_02_30.189_e2ds_A.xlsx  KPF.2007-04-07T09_18_58.055_e2ds_A.xlsx  KPF.2007-04-08T09_11_58.465_e2ds_A.xlsx  KPF.2007-04-09T09_51_56.458_e2ds_A.xlsx
docs/: Makefile  api.html  data_models.html  genindex.html  index.html  make.bat  objects.inv  pipelines.html  primitives.html  py-modindex.html  requirements.txt  search.html  searchindex.js
examples/: Create_L0_data.ipynb  (+110 more)
polly/: LICENSE  README.md  pyproject.toml
polly/assets/: Spectrum-Order-Peak-diagram.drawio
polly/src/polly/: __init__.py  driftmeasurement.py  etalonanalysis.py  fileselection.py  kpf.py  log.py  misc.py  parsing.py  plotting.py
polly/tools/: example_notebook.ipynb  peaks_in_pixel_space_single.py  run_analysis_batch.py  run_analysis_single.py  test_run_analysis_single.py
(+1339 files in other folders)
